--- a/style.css
+++ b/style.css
@@ -237,12 +237,7 @@ main{
     max-width: 300px;
     height: 350px;
     margin: 30px 0px;
-    background-color: rgba(137, 43, 226, 0.185);
-    z-index: 1;
-}
-
-.projectCover{
-    transform: rotate(30deg,0deg,30deg);
+    background-color: rgba(137, 43, 226, 0);
 }
 
 .project{
@@ -270,6 +265,8 @@ main{
     z-index: 1;
     color: rgb(4, 4, 41);
     font-weight: bold;
+    transform-style: preserve-3d;
+    transform: translate3d(0,0,200px);
 }
 
 .project h3{
