--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --color1 : rgb(255, 235, 205);
     --color2 : rgb(11, 30, 94) ;
-    --color3 : rgb(96, 49, 150);
+    --color3 : rgb(207, 164, 255);
 }
 
 *{
@@ -63,8 +63,8 @@ li button,.input{
     cursor: pointer;
     padding: 5px 8px;
     border-radius: 0% 40%;
-    box-shadow: -2px 2px 10px rgb(20, 15, 15),
-                -4px 4px 20px rgb(20, 14, 14);
+    box-shadow: -2px 2px 10px 1px rgb(20, 15, 15),
+                -4px 4px 20px 2px rgb(20, 14, 14);
     outline: none;
 }
 
@@ -121,7 +121,7 @@ main{
 .resumeLink{
     position: relative;
     left: 15%;
-    top: 25%;
+    top: 45%;
     width: fit-content;
 }
 
@@ -129,6 +129,7 @@ main{
     color: rgb(117, 22, 78);
     padding: 10px;
     text-decoration: none;
+    max-width: fit-content;
 }
 
 .links img{
@@ -188,7 +189,7 @@ main{
 .contactForm{
     position: relative;
     width: fit-content;
-    top: 15%;
+    top: 25%;
     left: 75%;
     display: flex;
     flex-wrap: wrap;
@@ -212,6 +213,19 @@ main{
     height: 0;
     overflow: hidden;
 } */
+
+
+.about-me{
+    position: relative;
+    bottom: -60%;
+    left: 0;
+    padding: 30px;
+}
+
+.about-me p{
+    color: rgb(119, 119, 119);
+    word-wrap: normal;
+}
 
 #projects{
     visibility: hidden;
@@ -240,7 +254,7 @@ main{
 .projectCover{
     max-width: 300px;
     height: 350px;
-    margin: 30px 0px;
+    margin: 30px 0px 90px 0px;
     background-color: rgba(137, 43, 226, 0);
     z-index: 2;
 }
@@ -258,7 +272,7 @@ main{
     align-items: center;
     flex-direction: column;
     max-width: 270px;
-    height: 300px;
+    height: 420px;
     filter: blur(0.3px);
     border-radius: 20%;
     border-top: 2px solid rgb(192, 192, 192);
@@ -267,6 +281,8 @@ main{
     border-bottom: 2px solid rgb(97, 96, 96);
     box-shadow:4px 4px 8px 5px rgba(0, 0, 0, 0.623);
 }
+
+
 
 .project h3,.project a,.project p{
     z-index: 1;
@@ -282,6 +298,8 @@ main{
 
 .project p{
     font-weight: 450;
+    overflow: hidden;
+    padding-left: 3px;
 }
 
 .project a{
@@ -298,11 +316,29 @@ main{
     filter: blur(1.5px);
 }
 
+.projectImage img{
+    max-width: 560px;
+    height: 200px;
+}
+
 @media (max-width: 600px) {
     :root{
         --color1 : rgb(205, 255, 251);
         --color2 : rgb(3, 58, 1) ;
         --color3 : rgb(128, 126, 8) ;
+    }
+
+    *{
+        overflow: scroll;
+    }
+
+    .projectCover{
+        height: fit-content;
+        padding:20px;
+    }
+
+    .resumeLink{
+        overflow: visible;
     }
 
     .links{
@@ -320,15 +356,14 @@ main{
     }
 
     .contactForm .input{
-        margin: 10px 0;
+        margin: 3px;
         float: right;
+        box-shadow: 2px 2px 5px 2px rgb(185, 176, 176);
     }
 
     .showImage{
         flex-direction: column;
     }
-}
-
 
 @media (min-width: 1400px) {
     :root{
